# dl-releases

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
src/: config.rs  github_client.rs  lib.rs  main.rs  utils.rs
src/domain/: mod.rs  release.rs  repo.rs
src/domain/test_files/: jesseduffield_lazydocker.json  jesseduffield_lazygit.json  rust-lang_rust-analyzer.json
src/test_files/: lazydocker_example.txt  lazygit_example.txt  rust-analyzer_example.txt
