[package]
name = "dl-releases"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
dialoguer = "0.11"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
jiff = { version = "0.2", features = ["serde"] }
directories = "6.0"
config = { version = "0.15", default-features = false, features = ["toml"] }
toml = "0.9"
itertools = "0.14"
regex = "1.11"
semver = "1.0"
console = "0.16"
indicatif = "0.18"
futures = "0.3"

[dev-dependencies]
googletest = "0.14"
